it from getEnumArray(). This makes it customisable through the
schoolarray.php file. Each step must itself be an item in the
enrolment status array.

The ability to filter the MarkBook columns from the bookoptions by
type has been provided using the $umntype bookvar. It provides four
options classwork, homework or tracking (reports and assessments).


Version ClaSS-0.8.31 release (2007/10/11)
-----------------------------------------

Changed the way perms are handled for form tutors. The tutor no longer
joins the group for that yid, instead they are checked for
independently and always receive rwe=1 perms.

A new option added to the yeargroup_matrix page, available to admin
and office roles, produces basic demographic statistics of male/female
ratios and nationalities broken down by yeargroup. This adds
countin_community_gender() to the functions.

New and crude display_date() function which improves the presentaiton
of dates. Cannot yet be used for input boxes though!

Added secondnationality field to the info table and Student array.

Introduced the concept of an entry test, or assessments specifically
used during the entry process. These can be specific to the course of
entry and fetch_enrolmentAssDef() will find the relevant ones based on
the yeargroup a student is enroling for. The assessments for
enrolments are distinguished by stage='E' and bid='G' and
year='0000'. The scores display as part of the community_list page for
enrolments.

Editing of enrolment assessments added to the student_view_enrolment
page.

The update_assessment() function has been relaxed to allow blanked
scores to be deleted from eidsid table.

Improved student_scores in the InfoBook by using the Assessment's
element to condense all asses with equivalent year and element values
into the same table row. This means a row can transcend courses and is
truly cross-curricular.

Fixed the report_incidents and report_comments pages to be able to
handle selection of students by cohort.
